--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.0"
+    "express-validator": "^7.2.0",
+    "mongodb": "^6.12.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
