--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3003
-MONGO_URL=mongodb+srv://andrewdudal1997:<db_password>@cluster.mqrbc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster
+PORT=1387
+MONGO_URL=mongodb+srv://andrewdudal1997:andrewdudal1997@cluster.mqrbc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster
 DB_NAME=DB_API
