--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=1387
-MONGO_URL=mongodb+srv://andrewdudal1997:andrewdudal1997@cluster.mqrbc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster
-DB_NAME=DB_API
+MONGO_URL=mongodb://user1:password1@91.108.243.169:27017/mydb1?authSource=mydb1
+DB_NAME=mydb1
