--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "mongodb": "^6.12.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -27,6 +28,7 @@
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
+    "date-fns": "^4.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
