--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=1387
 MONGO_URL=mongodb://user1:password1@91.108.243.169:27017/mydb1?authSource=mydb1
 DB_NAME=mydb1
-JWT_SECRET=123
+ACCESS_TOKEN_SECRET=1387
+REFRESH_TOKEN_SECRET=1963
