--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
-    "jest": "jest -i",
-    "jest:coverage": "jest -i --coverage"
+    "jest": "jest --config jest.config.json ",
+    "jest:coverage": "jest -i --coverage",
+    "test:e2e": "jest --config jest-e2e.json --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
