--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,8 @@
     /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "__tests__/**/*",
+    "types/**/*"
   ]
 }
