--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
+    "inversify": "^7.0.0-alpha.5",
     "mongodb": "^6.12.0",
     "nodemailer": "^6.10.0",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
