--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URL=mongodb://user1:password1@91.108.243.169:27017/mydb1?authSource=mydb1
 DB_NAME=mydb1
 ACCESS_TOKEN_SECRET=1387
 REFRESH_TOKEN_SECRET=1963
+EMAIL_USER=andrew.dudal.1997@gmail.com
+EMAIL_PASS=bwxyzxbcfadxrmml
