--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ ACCESS_TOKEN_SECRET=1387
 REFRESH_TOKEN_SECRET=1963
 EMAIL_USER=andrew.dudal.1997@gmail.com
 EMAIL_PASS=bwxyzxbcfadxrmml
+ACCESS_TOKEN_EXPIRES_IN=300s
+REFRESH_TOKEN_EXPIRES_IN=600s
