--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
