--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e": "jest --config jest-e2e.json --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -19,6 +19,8 @@
     "express-validator": "^7.2.0",
     "inversify": "^7.0.0-alpha.5",
     "mongodb": "^6.12.0",
+    "mongodb-memory-server": "^10.1.4",
+    "mongodb-memory-server-global-4.4": "^10.1.4",
     "nodemailer": "^6.10.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^11.0.5"
@@ -32,13 +34,13 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/supertest": "^6.0.2",
+    "@types/supertest": "^6.0.3",
     "date-fns": "^4.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.1",
     "nodemon": "^3.1.9",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
